@@ -13,11 +13,15 @@ AUX nvidia 1510 RMD160 ca0d0e5375109d9edf682d9bdda743b7c693e4d4 SHA1 85cf9bff167
 AUX nvidia-169.07 639 RMD160 8baddb6fd1bf7f0e2688870a78e8ace051d62e3f SHA1 b30487ba2a24a6b1359d1fd831eeb1705060953c SHA256 a8c4860f008d53776fda7a17b59524f271236559af688e9a2c9845cbbcba1577
 AUX nvidia-2.6.28.patch 5665 RMD160 a3575e7c8907955bfee6608bfd3ea7e30d8d5c3b SHA1 727a575105fb59eb67495ab35680e3095f6dec5a SHA256 ddb20b21074dd8bbf0bb32ac830b662bde77ba8dfd54ef515672876bb30f21e0
 DIST NVIDIA-FreeBSD-x86-185.13.tar.gz 19802484 RMD160 e398aeb7dfa0aa7dd231ce6a23ff28bbad115a4c SHA1 77e1f1d4c717a12f64aeab1874632832cfd627cf SHA256 85dbef9c1e1174438d6d6987ea89299790716029915b3a47536fc5fb4998b426
+DIST NVIDIA-FreeBSD-x86-185.18.04.tar.gz 19185492 RMD160 5e3e2504c82a060e33534fa18263ff2230f5b6d1 SHA1 4c41b95a8d84cd96a58f5fc51fac433f09a8c2eb SHA256 b84e769c7ff06478d1989c88475792284388c8e0ed78de31af7f0b0f32a3dc4c
 DIST NVIDIA-FreeBSD-x86-185.19.tar.gz 19866641 RMD160 03c84d542f592efb20d2f27e4d3a71e4e1f92f69 SHA1 95a7cc48dce788b3e07323bbe85d651897ecbb4f SHA256 a4ab9f6598789e81574a61a05ff4f12e27c832dcec3f815d87eb07a937b085ab
 DIST NVIDIA-Linux-x86-185.13-pkg0.run 14729631 RMD160 3184e7ada85d440db80821136302b3484d7ee150 SHA1 05f053cf849d3e0776fd6b30863f72b0ceae84e1 SHA256 3497acdc1ec054c345d4ed8f35f242eb5aefefe5ff7d72cbc87e71e91e1d4a5f
+DIST NVIDIA-Linux-x86-185.18.04-pkg0.run 14092597 RMD160 54c92315a57174a251357af42b856ec08878cc29 SHA1 a3934f0f269b97073a9182f2812e799a05509052 SHA256 fc49fbb40c8ab53cf58c1eb52e44ae0ae55316cdd7e4421f1a81e1ce3feb1d62
 DIST NVIDIA-Linux-x86-185.19-pkg0.run 14771781 RMD160 1ad80cff76f52c71f5b16751f61717a59a93756c SHA1 837bdfdf9d0cedeb23256439713a0cbfd9189087 SHA256 f79615ea4afd6ee4471389e5e76d58fc1df72f56d6d2009f3c245cfba053c61c
 DIST NVIDIA-Linux-x86_64-185.13-pkg2.run 23384276 RMD160 5e13c82ab81a69f168298dad15ed5d1d0433a739 SHA1 ca594e5e821fe97d432f72f7bad2d8a51960cee3 SHA256 28595014da53ad6557222423a8dd9be84b72f139911d2157c66186180df895b5
+DIST NVIDIA-Linux-x86_64-185.18.04-pkg2.run 22168047 RMD160 0f428d3290d8673ea1f745564004bb03adb75581 SHA1 0e695d7ce87232111e9da95c992691b1276f95ad SHA256 ef9f38b60402144fcfb63b147c3b8b77ef5d1cbbb4ed8f0708b9fa2c480cd06b
 DIST NVIDIA-Linux-x86_64-185.19-pkg2.run 23458043 RMD160 e5951bf0001b0897806e820f63c54769297bf67b SHA1 523813449acb6fa91c46b62b15a5d3a2fb9bcd56 SHA256 43cca8302cb23cda259ad0befd559d986803be27dad2b4df43777d1f0eb4fac3
 EBUILD nvidia-drivers-185.13.ebuild 15430 RMD160 b78877db67606cda73a79417fea99e946febe371 SHA1 82f21f6abc9da89b27a1cef1039eee3ff8af98b1 SHA256 f72ce734d2b4d8b5325612bba9ba92ccb332b0ac88acc0de1817c8882918fcec
+EBUILD nvidia-drivers-185.18.04.ebuild 15430 RMD160 b78877db67606cda73a79417fea99e946febe371 SHA1 82f21f6abc9da89b27a1cef1039eee3ff8af98b1 SHA256 f72ce734d2b4d8b5325612bba9ba92ccb332b0ac88acc0de1817c8882918fcec
 EBUILD nvidia-drivers-185.19.ebuild 15430 RMD160 b78877db67606cda73a79417fea99e946febe371 SHA1 82f21f6abc9da89b27a1cef1039eee3ff8af98b1 SHA256 f72ce734d2b4d8b5325612bba9ba92ccb332b0ac88acc0de1817c8882918fcec
 MISC ChangeLog 1203 RMD160 0bedb3210d09a25e2437c664ae74c17ca254a4bf SHA1 f892007284f8d5d7da28e02633e37435ec5456ee SHA256 9b1662e1b8ca4a50e69f9073384753a08d797b36739b4657ad856f8ac6994a2f
